--- a/app/www/index.html
+++ b/app/www/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <meta http-equiv="Content-Security-Policy" 
+         content="default-src *; 
+                  style-src * 'self' 'unsafe-inline' 'unsafe-eval'; 
+                  script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
   <title></title>
   <link rel="manifest" href="manifest.json">
   <!-- un-comment this code to enable service worker
@@ -23,7 +27,13 @@
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
   <!-- your app's js -->
-  <script src="js/app.js"></script>
+  <script src="scripts/app.js"></script>
+  <script src="scripts/controllers.js"></script>
+  <script src="scripts/directive.js"></script>
+  <script src="scripts/filter.js"></script>
+  <script src="scripts/services.js"></script>
+  <script src="scripts/vendor.js"></script>
+  
 </head>
 <body ng-app="starter">
 <ion-pane>
@@ -31,157 +41,9 @@
     <img ng-src="img/logo.jpg" width="100%" >
   </ion-header-bar>
 
-  <ion-nav-view></ion-nav-view>
-
-
-  <script id="templates/login.html" type="text/ng-template">
-    <ion-view view-title="Login">
-
-    <ion-content class="padding login-bg">
-      <div class="row">
-        <h4  ><b>Cities Unlocked is a unique collaboration between Guide Dogs and Microsoft,
-          which explores the potential technology has to enable people living with sight
-          loss to get out and about, independently and confidently, in our towns and cities.</b> </h4>
-      </div>
-
-      <h3  ng-if="data.username">
-        Hello {{ data.username }}
-      </h3>
-      <h3 ng-if="!data.username">
-        {{ default_text }}
-      </h3>
-      <label class="item item-input">
-        <input ng-model="data.username" type="text" placeholder="Username" required>
-      </label>
-      <label class="item item-input">
-        <input ng-model="data.password" type="password" placeholder="Password" required>
-      </label>
-      <div class="row">
-        <div class="col col-50">
-          <button ng-click="login(data)" class="button button-block button-positive">
-            <i class="icon icon-locked"></i> Log in</button>
-        </div>
-        <div class="col col-50">
-          <button ng-click="goToRegister()" class="button button-block button-positive">Register</button>
-        </div>
-      </div>
-    </ion-content>
-      </ion-view>
-  </script>
-
-  <script id="templates/register.html" type="text/ng-template">
-    <ion-view view-title="Register">
-    <ion-content class="padding-top padding-bottom login-bg">
-
-        <div class="list">
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">First Name</span>
-            <input ng-model="register.firstName" type="text" placeholder="John">
-          </label>
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">Last Name</span>
-            <input ng-model="register.lastName" type="text" placeholder="Suhr">
-          </label>
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">Email</span>
-            <input ng-model="register.email" type="text" placeholder="john@suhr.com">
-          </label>
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">Password</span>
-            <input ng-model="register.password" type="password" placeholder="password" >
-          </label>
-          <label class="item item-input item-stacked-label">
-            <span class="input-label">Confirm Password</span>
-            <input ng-model="register.password_confirm" type="password" placeholder="password" >
-          </label>
-          <div class="padding">
-            <button ng-click="register()" class="button button-block button-positive">Create Account</button>
-          </div>
-          <a ng-click="goToLogin()" class="item item-icon-left">
-            <i class="icon ion-locked"></i>
-            <h4>Already have an account? Click here to login</h4>
-          </a>
-        </div>
-    </ion-content>
-      </ion-view>
-  </script>
-
-  <script id="templates/dashboard.html" type="text/ng-template">
-    <ion-view view-title="Dashboard">
-      <ion-content class="padding-top padding-bottom login-bg">
-        <div class="row">
-          <h3>Welcome back, {{ user_data.username }} !</h3>
-        </div>
-
-        <div class="list card">
-
-          <a ng-click="viewFriends()" class="item item-icon-left">
-            <i class="icon ion-person-stalker"></i>
-            View friends
-          </a>
-
-          <a  class="item item-icon-left">
-            <i class="icon ion-person-add"></i>
-            Add friend
-          </a>
-
-          <a  class="item item-icon-left">
-            <i class="icon ion-fork-repo"></i>
-            Create Route
-          </a>
-
-          <a  class="item item-icon-left">
-            <i class="icon ion-star"></i>
-            View Saved Routes
-          </a>
-
-          <a  class="item item-icon-left">
-            <i class="icon ion-email-unread"></i>
-            View friend/route requests
-          </a>
-
-          <a  class="item item-icon-left">
-            <i class="icon ion-settings"></i>
-            Account settings
-          </a>
-
-          <a href="#"  style="background:red" class="item item-icon-left">
-            <i class="icon ion-log-out"></i>
-            Log Out
-          </a>
-
-        </div>
-
-      </ion-content>
-    </ion-view>
-  </script>
-
-
-  <script id="templates/friends.html" type="text/ng-template">
-    <ion-view view-title="Friends">
-      <ion-content class="padding-top padding-bottom login-bg">
-        <a ng-click="goToDashboard()"  class="item item-icon-left">
-          <i class="icon ion-chevron-left"></i>
-          Go back
-        </a>
-        <div>
-          <h3> You have {{ friends.length }} friends:</h3>
-        </div>
-
-        <div class="list">
-          <a class="item item-avatar" ng-repeat="friend in friends" >
-            <img src="img/avatar.jpg">
-            <h2>{{friend.name }}</h2>
-            <p>Back off, man. I'm a scientist.</p>
-          </a>
-
-
-
-        </div>
-
-      </ion-content>
-    </ion-view>
-  </script>
+  <ion-nav-view>
+  <!-- HERE Angualar automatically inserts the views from the folder template -->
+  </ion-nav-view>
 
 </ion-pane>
 </body>
