--- a/app/www/index.html
+++ b/app/www/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <meta http-equiv="Content-Security-Policy" 
-         content="default-src *; 
-                  style-src * 'self' 'unsafe-inline' 'unsafe-eval'; 
+  <meta http-equiv="Content-Security-Policy"
+         content="default-src *;
+                  style-src * 'self' 'unsafe-inline' 'unsafe-eval';
                   script-src * 'self' 'unsafe-inline' 'unsafe-eval';">
   <title></title>
   <link rel="manifest" href="manifest.json">
@@ -29,11 +29,11 @@
   <!-- your app's js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers.js"></script>
-  <script src="scripts/directive.js"></script>
-  <script src="scripts/filter.js"></script>
+  <script src="scripts/directives.js"></script>
+  <script src="scripts/filters.js"></script>
   <script src="scripts/services.js"></script>
   <script src="scripts/vendor.js"></script>
-  
+
 </head>
 <body ng-app="starter">
 <ion-pane>
