started implementing map

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -27,6 +27,8 @@
   <script src="lib/ionic/js/angular/angular-resource.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
+  <!--bing maps-->
+   <script type="text/javascript" src="https://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0&s=1"></script>
   <!-- your app's js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers.js"></script>
