convert to point complete

--- a/app/www/index.html
+++ b/app/www/index.html
@@ -49,7 +49,9 @@
   <ion-nav-view>
   <!-- HERE Angualar automatically inserts the views from the folder template -->
   </ion-nav-view>
+  <ion-footer-bar align-title="left" class="bar-dark">
 
+  </ion-footer-bar>
 </ion-pane>
 </body>
 </html>
