--- a/app/www/index.html
+++ b/app/www/index.html
@@ -30,7 +30,7 @@
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 
   <script src="cordova.js"></script>
-  
+
   <!-- Bing Map -->
   <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol'></script>
 
@@ -46,7 +46,7 @@
 <body ng-app="starter">
 <ion-pane>
   <ion-header-bar class="bar-stable" align-title="center">
-    <img ng-src="img/logo.jpg" width="100%" >
+    <img ng-src="img/logo2.png" width="100%" >
   </ion-header-bar>
 
   <ion-nav-view>
