--- a/app/www/index.html
+++ b/app/www/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, 
-  <meta http-equiv="Content-Security-Policy" content="default-src * gap://ready file:; style-src 'self' 'unsafe-inline'; img-src 'self' data:; script-src * 'unsafe-inline' 'unsafe-eval'">  <title></title>
+  <meta name="viewport" content="initial-scale=1,
+  http-equiv="Content-Security-Policy" content="default-src * gap://ready file:; style-src 'self' 'unsafe-inline'; img-src 'self' data:; script-src * 'unsafe-inline' 'unsafe-eval'">  <title></title>
   <link rel="manifest" href="manifest.json">
   <!-- un-comment this code to enable service worker
      <script>
