--- a/app/www/index.html
+++ b/app/www/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-  <meta http-equiv="Content-Security-Policy"
-         content="default-src *;
+  <meta http-equiv="Content-Security-Policy" content="default-src *;
                   style-src * 'self' 'unsafe-inline' 'unsafe-eval';
                   script-src * 'self' 'unsafe-inline' 'unsafe-eval';
                  img-src * 'self' data:;
@@ -14,6 +13,8 @@
 
   <link href="lib/ionic/css/ionic.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+ 
+
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
      <link href="css/ionic.app.css" rel="stylesheet">
      -->
@@ -21,7 +22,7 @@
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
   <script src="lib/ionic/js/angular/angular-resource.js"></script>
-
+  <script src="lib/ionic.cloud.min.js"></script>
   <!--add the ngCordova file-->
   <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 
@@ -32,7 +33,7 @@
   <script src="cordova.js"></script>
 
   <!-- Bing Map -->
-  <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol'></script>
+  <script type="text/javascript" src="http://www.bing.com/api/maps/mapcontrol"></script>
 
   <!-- your app's js -->
   <script src="scripts/app.js"></script>
@@ -46,10 +47,10 @@
 <body ng-app="starter">
 <ion-pane>
   <ion-header-bar class="bar-stable" align-title="center">
-    <img ng-src="img/logo2.png" width="100%" >
+    <img ng-src="img/logo2.png" width="100%">
   </ion-header-bar>
 
-  <ion-nav-view>
+  <ion-nav-view >
   <!-- HERE Angualar automatically inserts the views from the folder template -->
   </ion-nav-view>
 
